--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -516,6 +516,12 @@
     <ClInclude Include="TCommunications_Handler2.h">
       <Filter>Заголовочные файлы\engine</Filter>
     </ClInclude>
+    <ClInclude Include="land.h">
+      <Filter>Заголовочные файлы\rms</Filter>
+    </ClInclude>
+    <ClInclude Include="script.h">
+      <Filter>Заголовочные файлы\rms</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemode.cpp">
@@ -973,6 +979,12 @@
     </ClCompile>
     <ClCompile Include="TCommunications_Handler2.cpp">
       <Filter>Файлы исходного кода\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="land.cpp">
+      <Filter>Файлы исходного кода\rms</Filter>
+    </ClCompile>
+    <ClCompile Include="script.cpp">
+      <Filter>Файлы исходного кода\rms</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
