--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="aicommandunits.h" />
     <ClInclude Include="aigoals.h" />
     <ClInclude Include="ailog.h" />
+    <ClInclude Include="airtoair.h" />
     <ClInclude Include="aisnx.h" />
     <ClInclude Include="aiunitcount.h" />
     <ClInclude Include="animatedterrain.h" />
@@ -384,6 +385,7 @@
     <ClCompile Include="aigoals.cpp" />
     <ClCompile Include="ailog.cpp" />
     <ClCompile Include="aipower.cpp" />
+    <ClCompile Include="airtoair.cpp" />
     <ClCompile Include="aisnx.cpp" />
     <ClCompile Include="aiunitcount.cpp" />
     <ClCompile Include="animatedterrain.cpp" />
