--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -531,6 +531,9 @@
     <ClInclude Include="rmslog.h">
       <Filter>Заголовочные файлы\rms</Filter>
     </ClInclude>
+    <ClInclude Include="hideineditor.h">
+      <Filter>Заголовочные файлы\editor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemode.cpp">
@@ -1003,6 +1006,9 @@
     </ClCompile>
     <ClCompile Include="rmslog.cpp">
       <Filter>Файлы исходного кода\rms</Filter>
+    </ClCompile>
+    <ClCompile Include="hideineditor.cpp">
+      <Filter>Файлы исходного кода\editor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
