--- a/cheatdll/cheatdll.vcxproj.filters
+++ b/cheatdll/cheatdll.vcxproj.filters
@@ -540,6 +540,9 @@
     <ClInclude Include="aishipyard.h">
       <Filter>Заголовочные файлы\ai</Filter>
     </ClInclude>
+    <ClInclude Include="hotfix.h">
+      <Filter>Заголовочные файлы\misc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gamemode.cpp">
@@ -1021,6 +1024,9 @@
     </ClCompile>
     <ClCompile Include="aishipyard.cpp">
       <Filter>Файлы исходного кода\ai</Filter>
+    </ClCompile>
+    <ClCompile Include="hotfix.cpp">
+      <Filter>Файлы исходного кода\misc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
